// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The CardBanner with specific props matches the snapshot 1`] = `
Array [
  <span
    className="hlUcIR"
  >
    Free Trial Available.
  </span>,
  <span
    className="ejaAMP"
  />,
]
`;

exports[`The empty CardBanner matches the snapshot 1`] = `
Array [
  <span
    className="iflUQY"
  />,
  <span
    className="ejaAMP"
  />,
]
`;
